js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-async-function-await-import-defer-script-code-valid.js
async
function
f
(
)
{
await
import
.
defer
(
'
.
/
empty_FIXTURE
.
js
'
)
;
}
reportCompare
(
0
0
)
;
