js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-await-import-defer-no-rest-param.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
await
import
.
defer
(
.
.
.
[
'
.
/
empty_FIXTURE
.
js
'
]
)
;
}
